--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,16 +18,17 @@ repos:
     hooks:
 
     - id: black
-      name: Format code using Black
+      name: Format code using black
       stages: [commit]
       language: system
-      entry: black
+      entry: python -m black
       types: [python]
       files: (^src/|^tests/)
 
     - id: pylint
-      name: Check code style using Pylint
+      name: Check code style using pylint
       language: system
       stages: [commit]
-      entry: pylint
+      entry: python -m pylint
       types: [python]
+      files: (^src/|^tests/)
